--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
           <ul class="projects-list">
             <li class="projects-item">
-              <h1 class="titulo">Dev BackEnd PHP </h1>
+              <h1 class="titulo">Dev BackEnd </h1>
               <p class="descricao">
                 Se interrou? Bora trocar trocar uma ideia!
               </p>
