--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <header class="header-bar">
       <div>
-        <h1 class="nome">Seja Bem-vind@!</h1>
+        <h1 class="nome">Seja Bem-Vind@!</h1>
       </div>
 
       <ul class="redes-sociais">
@@ -75,19 +75,18 @@
           <h1 class="titulo">Sobre Mim</h1>
           <p class="descricao">
             Sou formada em psicologia e tenho MBA em Gestão de Pessoas. 
-            Atuo como Tech Recruiter. 
-            Cada dia aprendo algo novo.
-            Cada dia há um desafio novo a ser superado.
+            Atuo na área de recursos humanos, com foco na atração e seleção de talentos de várias áreas. 
+            Hoje atuo como Tech Recruiter, buscando e encontrando os melhores talentos da área de TI. 
           </p>
           
           <h2 class="subtitulo">Curiosidades</h2><br/>
           <p class="descricao">
             <ul >
               <li class="descricao">
-                - Sou apaixonada por filmes e livros!
+                Sou apaixonada por filmes e livros!
               </li>
               <li class="descricao">
-                - Adoro saber tudo sobre a cultura pop!
+                Adoro saber tudo sobre a cultura pop!
               </li>
             </ul>
           </p>
