--- a/index.html
+++ b/index.html
@@ -75,8 +75,9 @@
           <h1 class="titulo">Sobre Mim</h1>
           <p class="descricao">
             Sou formada em psicologia e tenho MBA em Gestão de Pessoas. 
-            Atuo na área de recursos humanos, com foco na atração e seleção de talentos de várias áreas. 
-            Hoje atuo como Tech Recruiter, buscando e encontrando os melhores talentos da área de TI. 
+            Atuo na área de recursos humanos, principalmente, com a atração e seleção de talentos das áreas de Varejo, Comercial, SDR, Marketing, CRM, entre outras. 
+            Atualmente, trabalho como Tech Recruiter, buscando e encontrando os melhores talentos da área de TI. 
+            Levo em consideração sempre o respeito, a empatia e a transparência em tudo o que faço.
           </p>
           
           <h2 class="subtitulo">Curiosidades</h2><br/>
