--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
           <ul class="projects-list">
             <li class="projects-item">
-              <h1 class="titulo">Dev BackEnd </h1>
+              <h1 class="titulo">Dev Backend </h1>
               <p class="descricao">
                 Se interrou? Bora trocar trocar uma ideia!
               </p>
@@ -150,7 +150,7 @@
             </li>
 
             <li class="projects-item">
-              <h1 class="titulo">Dev Angular </h1>
+              <h1 class="titulo">Dev Frontend </h1>
               <p class="descricao">
                 Se interrou? Bora trocar trocar uma ideia!
               </p>
